Bug 430396 - Runs many programs when executable confirmation settings are changed
Summary: Runs many programs when executable confirmation settings are changed
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.75.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-14 21:31 UTC by Alexander Kernozhitsky
Modified: 2021-04-21 19:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.82
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Kernozhitsky 2020-12-14 21:31:57 UTC
STEPS TO REPRODUCE

Use Dolphin (version 20.12.0 or higher is required)

1. Go to "Configure Dolphin > General > Confirmations" and set "When opening executable file" to "Open in application".
2. Find any binary executable (for example, /usr/bin/kate) and click many times to open it 
3. Go to "Configure Dolphin > General > Confirmations" and set "When opening executable file" to "Always ask".
4. Click to /usr/bin/kate to open it again, choose "Execute" in the opened dialog

OBSERVED RESULT

Kate is opened many times.

EXPECTED RESULT

Kate is opened exactly once.
Comment 1 Bug Janitor Service 2021-04-21 12:13:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/421
Comment 2 Ahmad Samir 2021-04-21 17:43:55 UTC
Git commit 7f81b92a3577fd318eef19f564206b8b0cc1cd05 by Ahmad Samir.
Committed on 21/04/2021 at 17:43.
Pushed by ahmadsamir into branch 'master'.

Make the openOrExecute dialog modal

It makes sense to make modal, and it goes with the general behaviour of dialogs
spawned by KIO jobs, e.g. RenameDialog and SkipDialog.

M  +1    -0    src/widgets/widgetsopenorexecutefilehandler.cpp

https://invent.kde.org/frameworks/kio/commit/7f81b92a3577fd318eef19f564206b8b0cc1cd05