Make the openOrExecute dialog modal

It makes sense to make modal, and it goes with the general behaviour of dialogs
spawned by KIO jobs, e.g. RenameDialog and SkipDialog.

BUG: 430396